@@ -167,15 +167,15 @@
         <!-- Security -->
         <bouncycastle.version>1.81</bouncycastle.version>
         <!-- JWT -->
-        <jwt.version>0.12.6</jwt.version>
+        <jwt.version>0.12.7</jwt.version>
 
         <!-- NIO Netty -->
-        <netty.version>4.2.3.Final</netty.version>
+        <netty.version>4.2.4.Final</netty.version>
         <netty-tcnative.version>2.0.72.Final</netty-tcnative.version>
         <!-- gRPC and protobuf -->
         <grpc.version>1.74.0</grpc.version>
         <guava.version>33.4.8-jre</guava.version>
-        <protobuf.version>4.31.1</protobuf.version>
+        <protobuf.version>4.32.0</protobuf.version>
         <!-- Web JAX-RS -->
         <swagger.core.version>2.2.35</swagger.core.version>
         <!--<elastic-apm.version>1.36.0</elastic-apm.version>-->
