@@ -2,12 +2,13 @@
 - enhanced security: replace secpr5121 with secp256r1 for default ECGenParameterSpec
 - enhanced security: Use of a cryptographic algorithm with insufficient key size - Throw InvalidAlgorithmParameterException when use of a cryptographic algorithm with insufficient key size to call EncryptorUtil.generateKeyPair()
 - enhanced security: fixed polynomial regular expression used on uncontrolled data (FormatterUtil)
+- enhanced error handling: PathParm with regex inside URL will return 400 Bad Request when regex does not match
 - enhanced logging: log detailed information and stack trace health check failure
 - enhanced logging: Netty channel handler exception will be logged only when:
     1. run with -debug
     2. or caller address is in enabled whitelist  or not in enabled blacklist
 
-- Config change: Regex.Prefix is no longer used in CallerAddressFilter, the whitelist and blacklist no longer need a prefix to mark a value as regex.
+- Config change: Regex.Prefix is removed in CallerAddressFilter, the whitelist and blacklist no longer need a prefix to mark a value as regex.
     1. cfg_nio.properties
         - removed: CallerAddressFilter.Regex.Prefix
         - default value changed: CallerAddressFilter.option=String (was "HostName")
